# Safety-Protection-Agent

./: .env.example  .gitignore  Cargo.toml  README.md  README_CN.md
scripts/: compare-owasp-agent-scores.ps1  eval-owasp-benchmark-regression.ps1  eval-owasp-benchmark-score.ps1  eval-owasp-benchmark.ps1  install.ps1  new-skill.ps1  setup-path.ps1
skills/: CONVENTIONS.md
skills/agent-redteam-lab/: SKILL.md
skills/agent-redteam-lab/agents/: openai.yaml
skills/agent-redteam-lab/references/: agent-redteam-methodology.md
skills/isolated-web-security-assessment/: SKILL.md
skills/isolated-web-security-assessment/agents/: openai.yaml
skills/isolated-web-security-assessment/references/: isolated-web-playbook.md
skills/web-vulnerability-discovery/: SKILL.md
skills/web-vulnerability-discovery/agents/: openai.yaml
skills/web-vulnerability-discovery/references/: web-vulnerability-playbook.md
src/: agent_lab.rs  cli.rs  lib.rs  mcp.rs  mcp_client.rs  tools.rs
src/agent/: config.rs  prompt.rs
src/agent/prompts/: compact.md  default.md
src/llm/: config.rs  error.rs  mod.rs  types.rs
src/llm/providers/: anthropic.rs  codex_chatgpt.rs  gemini.rs  mod.rs  ollama.rs  openai_compatible.rs  openai_responses.rs  sse.rs
src/tools/: builtins.rs  error.rs  handlers.rs  load_test.rs  registry.rs  risk.rs  router.rs  types.rs
src/tools/handlers/: database_risk.rs  echo.rs  http_active_probe.rs  http_load_test.rs  http_security_headers.rs  java_crypto_semantic.rs  java_injection_semantic.rs  java_randomness_semantic.rs  markdown_report.rs  software_agent_chat.rs  weak_session_id.rs  xss_risk.rs
tests/: agent_lab_mcp_stdio.rs
tests/evals/: owasp-benchmark-cases.example.json  owasp-benchmark-regression-cases.json
