[package]
name = "safety-protection-agent"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "An agent capable of scanning for different disclosed vulnerabilities."

[lib]
name = "safety_protection_agent"
path = "src/lib.rs"

[[bin]]
name = "spa-chat"
path = "src/bin/chat.rs"

[[bin]]
name = "spa"
path = "src/bin/spa.rs"

[[bin]]
name = "spa-mcp"
path = "src/bin/mcp.rs"

[[bin]]
name = "spa-agent-lab-mcp"
path = "src/bin/agent_lab_mcp.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive", "env"] }
crossterm = "0.29"
dotenvy = "0.15"
md5 = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rmcp = { version = "0.15.0", features = ["client", "transport-io", "transport-streamable-http-client-reqwest"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
thiserror = "2"
tokio = { version = "1", features = ["io-std", "io-util", "macros", "process", "rt-multi-thread", "time"] }
unicode-width = "0.2"
uuid = { version = "1", features = ["v4"] }
